# tool-share-app

./: .gitignore  Dockerfile  README.md  demo.py  demo_app.py  main.py  pyproject.toml  requirements.txt  seed_data.py  toolshare.db
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml
app/: add_tool.py  admin.py  browse.py  home.py  login.py  my_tools.py  profile.py  reservations.py  signup.py  tool_detail.py
app/pages/: add_tool.py  admin.py  browse.py  login.py  my_tools.py  profile.py  reservations.py  signup.py  tool_detail.py
lib/: auth.py  db.py  services.py  storage.py
migrations/: 001_initial_schema.sql
tests/: test_core.py  test_services.py
webapp/: app.py  auth_tester.py  backend_K.py  backend_V.py  frontend.py
